--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
     <script type="text/javascript" src="main.js"></script>
 </head>
 <body>
+<h1>Starship Lander</h1>
     <canvas id="gameWorld" width="1024" height="768" style="background: white; border: 1px solid black"></canvas>
 </body>
 </html>
