The starship now moves according to input command

--- a/src/index.html
+++ b/src/index.html
@@ -3,16 +3,25 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Game Project Title Goes Here</title>
-  
+    <title>Starship Lander</title>
+
+    <!-- Game Engine Files -->
     <script type="text/javascript" src="assetmanager.js"></script>
     <script type="text/javascript" src="timer.js"></script>
     <script type="text/javascript" src="gameengine.js"></script>
     <script type="text/javascript" src="util.js"></script>
     <script type="text/javascript" src="main.js"></script>
+    <!-- Starship -->
+    <script type="text/javascript" src="starship.js"></script>
+    <!-- SceneManager -->
+    <script type="text/javascript" src="sceneManager.js"></script>
+    <!-- Animator -->
+    <script type="text/javascript" src="animator.js"></script>
 </head>
 <body>
 <h1>Starship Lander</h1>
-    <canvas id="gameWorld" width="1024" height="768" style="background: white; border: 1px solid black"></canvas>
+    <canvas id="gameWorld" width="1024" height="768" style="background: white; border: 1px solid black" tabindex="0"
+            autofocus>
+    </canvas>
 </body>
 </html>
