The movement is finished but debug doesn't check off when it needs too

--- a/src/index.html
+++ b/src/index.html
@@ -17,11 +17,16 @@
     <script type="text/javascript" src="sceneManager.js"></script>
     <!-- Animator -->
     <script type="text/javascript" src="animator.js"></script>
+    <!-- Bounding Box -->
+    <script type="text/javascript" src="boundingbox.js"></script>
 </head>
 <body>
 <h1>Starship Lander</h1>
-    <canvas id="gameWorld" width="1024" height="768" style="background: white; border: 1px solid black" tabindex="0"
-            autofocus>
-    </canvas>
+<canvas id="gameWorld" width="1024" height="650" style="background: white; border: 1px solid black" tabindex="0" autofocus></canvas>
+<div>
+    <br>
+    <label for="debug">Debug</label>
+    <input type="checkbox" id="debug" checked>
+</div>
 </body>
 </html>
