--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,8 @@
     <script type="text/javascript" src="animator.js"></script>
     <!-- Bounding Box -->
     <script type="text/javascript" src="boundingbox.js"></script>
+    <!-- Green Alien -->
+    <script type="text/javascript" src="green-alien.js"></script>
 </head>
 <body>
 <h1>Starship Lander</h1>
