Created initial ground layer, fully aninated alien walking left - messing around with camera

--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,8 @@
     <script type="text/javascript" src="boundingbox.js"></script>
     <!-- Green Alien -->
     <script type="text/javascript" src="green-alien.js"></script>
+    <!-- Mars Ground -->
+    <script type="text/javascript" src="marsGround.js"></script>
 </head>
 <body>
 <h1>Starship Lander</h1>
