Added Chutulu & Astronaut - still need to implement astronaut flying

--- a/src/index.html
+++ b/src/index.html
@@ -5,24 +5,20 @@
     <meta charset="utf-8">
     <title>Starship Lander</title>
 
-    <!-- Game Engine Files -->
     <script type="text/javascript" src="assetmanager.js"></script>
     <script type="text/javascript" src="timer.js"></script>
     <script type="text/javascript" src="gameengine.js"></script>
     <script type="text/javascript" src="util.js"></script>
     <script type="text/javascript" src="main.js"></script>
-    <!-- Starship -->
     <script type="text/javascript" src="starship.js"></script>
-    <!-- SceneManager -->
     <script type="text/javascript" src="sceneManager.js"></script>
-    <!-- Animator -->
     <script type="text/javascript" src="animator.js"></script>
-    <!-- Bounding Box -->
     <script type="text/javascript" src="boundingbox.js"></script>
-    <!-- Green Alien -->
     <script type="text/javascript" src="green-alien.js"></script>
-    <!-- Mars Ground -->
     <script type="text/javascript" src="marsGround.js"></script>
+    <script type="text/javascript" src="chutulu.js"></script>
+    <script type="text/javascript" src="astronaut.js"></script>
+
 </head>
 <body>
 <h1>Starship Lander</h1>
