Added a background to mars - deleted old groundcover

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,6 @@
 ﻿
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <title>Starship Lander</title>
@@ -15,8 +15,8 @@
     <script type="text/javascript" src="animator.js"></script>
     <script type="text/javascript" src="boundingbox.js"></script>
     <script type="text/javascript" src="green-alien.js"></script>
-    <script type="text/javascript" src="marsGround.js"></script>
     <script type="text/javascript" src="astronaut.js"></script>
+    <script type="text/javascript" src="background.js"></script>
 
 </head>
 <body>
