Added more scene elements - still need to implement in game

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,4 @@
-﻿
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
@@ -17,6 +16,9 @@
     <script type="text/javascript" src="green-alien.js"></script>
     <script type="text/javascript" src="astronaut.js"></script>
     <script type="text/javascript" src="background.js"></script>
+    <script type="text/javascript" src="rocks.js"></script>
+    <script type="text/javascript" src="boulder.js"></script>
+    <script type="text/javascript" src="marsRoverConcept.js"></script>
 
 </head>
 <body>
