added curiosity rover to mars

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
 <script type="text/javascript" src="src/rocks.js"></script>
 <script type="text/javascript" src="src/boulder.js"></script>
 <script type="text/javascript" src="src/marsRoverConcept.js"></script>
+<script type="text/javascript" src="src/curiosityRover.js"></script>
+
 
 </body>
 </html>
