--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 <script type="text/javascript" src="src/marsRoverConcept.js"></script>
 <script type="text/javascript" src="src/curiosityRover.js"></script>
 <script type="text/javascript" src="src/undergroundMonster.js"></script>
+<script type="text/javascript" src="src/rockMonster.js"></script>
 
 
 </body>
