--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <script type="text/javascript" src="src/curiosityRover.js"></script>
 <script type="text/javascript" src="src/undergroundMonster.js"></script>
 <script type="text/javascript" src="src/rockMonster.js"></script>
-
+<script type="text/javascript" src="src/pickups.js"></script>
 
 </body>
 </html>
