Major refactoring & enemy inheritance

--- a/index.html
+++ b/index.html
@@ -23,19 +23,21 @@
 <script type="text/javascript" src="src/gameengine.js"></script>
 <script type="text/javascript" src="src/util.js"></script>
 <script type="text/javascript" src="src/main.js"></script>
-<script type="text/javascript" src="src/starship.js"></script>
-<script type="text/javascript" src="src/sceneManager.js"></script>
+<script type="text/javascript" src="src/scene/starship.js"></script>
+<script type="text/javascript" src="src/scene/sceneManager.js"></script>
 <script type="text/javascript" src="src/animator.js"></script>
 <script type="text/javascript" src="src/boundingbox.js"></script>
-<script type="text/javascript" src="src/green-alien.js"></script>
+<script type="text/javascript" src="src/alien/alien-projectile.js"></script>
+<script type="text/javascript" src="src/alien/alien.js"></script>
+<script type="text/javascript" src="src/alien/green-alien.js"></script>
 <script type="text/javascript" src="src/astronaut.js"></script>
-<script type="text/javascript" src="src/background.js"></script>
-<script type="text/javascript" src="src/rocks.js"></script>
-<script type="text/javascript" src="src/boulder.js"></script>
-<script type="text/javascript" src="src/marsRoverConcept.js"></script>
-<script type="text/javascript" src="src/curiosityRover.js"></script>
-<script type="text/javascript" src="src/undergroundMonster.js"></script>
-<script type="text/javascript" src="src/rockMonster.js"></script>
+<script type="text/javascript" src="src/scene/background.js"></script>
+<script type="text/javascript" src="src/scene/rocks.js"></script>
+<script type="text/javascript" src="src/scene/boulder.js"></script>
+<script type="text/javascript" src="src/scene/marsRoverConcept.js"></script>
+<script type="text/javascript" src="src/scene/curiosityRover.js"></script>
+<script type="text/javascript" src="src/alien/mars-turtle.js"></script>
+<script type="text/javascript" src="src/alien/rockMonster.js"></script>
 <script type="text/javascript" src="src/pickups.js"></script>
 
 </body>
