Created new vehicle parent class, refactored

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 <script type="text/javascript" src="src/gameengine.js"></script>
 <script type="text/javascript" src="src/util.js"></script>
 <script type="text/javascript" src="src/main.js"></script>
+<script type="text/javascript" src="src/scene/vehicle.js"></script>
 <script type="text/javascript" src="src/scene/starship.js"></script>
 <script type="text/javascript" src="src/scene/sceneManager.js"></script>
 <script type="text/javascript" src="src/animator.js"></script>
