Projectiles completed, rock enemy mostly complete

--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
     <input type="checkbox" id="debug" checked>
 </div>
 
-<script type="text/javascript" src="src/assetmanager.js"></script>
+<script type="text/javascript" src="src/asset-manager.js"></script>
 <script type="text/javascript" src="src/timer.js"></script>
-<script type="text/javascript" src="src/gameengine.js"></script>
+<script type="text/javascript" src="src/game-engine.js"></script>
 <script type="text/javascript" src="src/util.js"></script>
 <script type="text/javascript" src="src/main.js"></script>
 <script type="text/javascript" src="src/scene/vehicle.js"></script>
 <script type="text/javascript" src="src/scene/starship.js"></script>
-<script type="text/javascript" src="src/scene/sceneManager.js"></script>
+<script type="text/javascript" src="src/scene/scene-manager.js"></script>
 <script type="text/javascript" src="src/animator.js"></script>
-<script type="text/javascript" src="src/boundingbox.js"></script>
+<script type="text/javascript" src="src/bounding-box.js"></script>
 <script type="text/javascript" src="src/alien/alien-projectile.js"></script>
 <script type="text/javascript" src="src/alien/alien.js"></script>
 <script type="text/javascript" src="src/alien/green-alien.js"></script>
@@ -35,10 +35,10 @@
 <script type="text/javascript" src="src/scene/background.js"></script>
 <script type="text/javascript" src="src/scene/rocks.js"></script>
 <script type="text/javascript" src="src/scene/boulder.js"></script>
-<script type="text/javascript" src="src/scene/marsRoverConcept.js"></script>
-<script type="text/javascript" src="src/scene/curiosityRover.js"></script>
+<script type="text/javascript" src="src/scene/mars-rover-concept.js"></script>
+<script type="text/javascript" src="src/scene/perseverance-rover.js"></script>
 <script type="text/javascript" src="src/alien/mars-turtle.js"></script>
-<script type="text/javascript" src="src/alien/rockMonster.js"></script>
+<script type="text/javascript" src="src/alien/rock-monster.js"></script>
 <script type="text/javascript" src="src/pickups.js"></script>
 
 </body>
