--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <input type="checkbox" id="debug" checked>
 </div>
 
+<script type="text/javascript" src="live.js"></script>
 <script type="text/javascript" src="src/asset-manager.js"></script>
 <script type="text/javascript" src="src/timer.js"></script>
 <script type="text/javascript" src="src/game-engine.js"></script>
