--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 <script type="text/javascript" src="src/alien/mars-turtle.js"></script>
 <script type="text/javascript" src="src/alien/rock-monster.js"></script>
 <script type="text/javascript" src="src/pickups.js"></script>
+<script type="text/javascript" src="src/mars-base.js"></script>
 
 </body>
 </html>
