Git or github doesn't track case changes in file names?

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <br>
     <label for="debug">Debug</label>
     <input type="checkbox" id="debug" checked>
-    <p> Use WASD or Arrow keys to explore! </p>
+    <p> Use WASD or Arrow keys to explore! Space to shoot. </p>
     <p> Pick up batteries, oxygen, and jetpack fuel to reach the Mars base. </p>
 </div>
 
